Fix contrast in minimap and chart boxes

--- a/src/components/Chart/statbox.scss
+++ b/src/components/Chart/statbox.scss
@@ -33,7 +33,8 @@
     }
 
     .value-box {
-        border: 1px solid $gray-200;
+        background-color: $gray-100;
+        color: $gray-700;
         margin-right: -1px;
         flex: 1;
         display: flex;
@@ -52,8 +53,4 @@
         }
     }
 }
-.statbox:nth-child(2) {
-    .value-box {
-        background-color: $gray-100;
-    }
-}
+
